--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,8 @@
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-exec</artifactId>
-            <version>1.2.1</version>
+            <!--<version>1.2.1</version>-->
+            <version>2.3.4</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.pentaho</groupId>
